--- a/DesigningChess/DesigningChess.csproj
+++ b/DesigningChess/DesigningChess.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chess.cs" />
+    <Compile Include="Figure.cs" />
     <Compile Include="FigureException.cs" />
+    <Compile Include="Pawn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
