--- a/DesigningChess/DesigningChess.csproj
+++ b/DesigningChess/DesigningChess.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Pawn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
