--- a/DesigningChess/DesigningChess.csproj
+++ b/DesigningChess/DesigningChess.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Elephant.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="FigureException.cs" />
+    <Compile Include="Horse.cs" />
     <Compile Include="Pawn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
